@startuml
title BlaiseConnect - Sprint 2 - Structure scolaire

left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

package "VUE - React" #E8F5E9 {
  class "pages/school_years_page.jsx" as SchoolYearsPage {
    - schoolYears
    - isLoading
    - errorMessage
    + loadSchoolYears()
    + handleCreateSchoolYear(data)
    + handleSchoolYearSelection(id)
  }
  class "pages/school_year_details_page.jsx" as SchoolYearDetailsPage {
    - schoolYear
    - periods
    - isEditingYear
    + loadDetails()
    + handleYearFormSubmit(event)
    + handleSetCurrentYear()
    + handleCloseCurrentYear()
    + handleDeleteSchoolYear(event)
  }
  class "services/school_year_service.js" as FrontSchoolYearService {
    + getSchoolYears()
    + getSchoolYear(id)
    + createSchoolYear(data)
    + updateSchoolYearDetails(id, data)
    + setCurrentSchoolYear(id)
    + closeSchoolYear(id)
    + getReportingPeriods(yearId)
    + createReportingPeriod(yearId, data)
    + updateReportingPeriod(yearId, periodId, data)
    + getSchoolYearDeletionPreview(id)
    + deleteSchoolYear(id, confirmationName)
  }

  class "pages/school_classes_page.jsx" as SchoolClassesPage {
    - schoolClasses
    - searchQuery
    - isLoading
    + loadSchoolClasses()
    + handleCreateSchoolClass(data)
  }
  class "services/school_class_service.js" as FrontSchoolClassService {
    + listSchoolClasses(filters)
    + createSchoolClass(data)
    + updateSchoolClass(id, data)
  }

  class "pages/subjects_page.jsx" as SubjectsPage {
    - subjects
    - isLoading
    + loadSubjects()
    + handleCreateSubject(data)
    + handleAssignSubject(data)
  }
  class "services/subject_service.js" as FrontSubjectService {
    + listSubjects()
    + createSubject(data)
    + updateSubject(id, data)
    + assignSubjectToClass(data)
  }

  class "pages/teachers_page.jsx" as TeachersPage {
    - teachers
    - searchQuery
    - isLoading
    + loadTeachers()
    + openTeacherDetails(id)
  }
  class "pages/teacher_details_page.jsx" as TeacherDetailsPage {
    - details
    - activeTab
    - personalForm
    + loadTeacher()
    + startPersonalEdit()
    + savePersonalInfo()
  }
  class "services/teachers_overview_service.js" as FrontTeacherService {
    + getTeachersOverview(query)
    + getTeacherDetail(id)
    + updateTeacherProfile(id, data)
  }
}

package "CONTROLEUR - FastAPI" #FFF3E0 {
  class "routes/school_years.py" as SchoolYearRoutes {
    + get_school_years(db, admin)
    + get_school_year(id, db, admin)
    + post_school_year(data, db, admin)
    + patch_school_year(id, data, db, admin)
    + patch_school_year_details(id, data, db, admin)
    + post_set_current_school_year(id, db, admin)
    + post_close_school_year(id, db, admin)
    + get_deletion_preview(id, db, admin)
    + delete_school_year(id, confirmation, db, admin)
  }
  class "routes/reporting_periods.py" as ReportingPeriodRoutes {
    + get_reporting_periods(yearId, db, admin)
    + post_reporting_period(yearId, data, db, admin)
    + patch_reporting_period(yearId, periodId, data, db, admin)
  }
  class "services/school_year_service.py" as SchoolYearService {
    + list_school_years(db)
    + get_school_year_by_id(db, id)
    + create_school_year(db, data)
    + update_school_year(db, id, data)
    + update_school_year_details(db, id, data)
    + set_current_school_year(db, id)
    + close_school_year(db, id, adminId)
    + get_school_year_deletion_preview(db, id)
    + delete_open_school_year(db, id, name, adminId)
  }
  class "services/reporting_period_service.py" as ReportingPeriodService {
    + list_reporting_periods(db, yearId)
    + get_reporting_period_by_id(db, id)
    + compute_next_period_start_date(db, yearId)
    + create_reporting_period(db, data)
    + update_reporting_period(db, id, data)
  }

  class "routes/school_classes.py" as SchoolClassRoutes {
    + get_school_classes(filters, db, admin)
    + post_school_class(data, db, admin)
    + patch_school_class(id, data, db, admin)
    + get_school_class_composition(id, db, admin)
  }
  class "services/school_class_service.py" as SchoolClassService {
    + list_school_classes(db, filters)
    + create_school_class(db, data)
    + update_school_class(db, id, data)
    + get_school_class_composition(db, id)
  }

  class "routes/subjects.py" as SubjectRoutes {
    + get_subjects(db, admin)
    + post_subject(data, db, admin)
    + patch_subject(id, data, db, admin)
    + post_class_subject(data, db, admin)
  }
  class "services/subject_service.py" as SubjectService {
    + list_subjects(db)
    + create_subject(db, data)
    + update_subject(db, id, data)
    + assign_subject_to_class(db, data)
    + validate_coefficient(value)
  }

  class "routes/teachers.py" as TeacherRoutes {
    + get_teachers_overview(query, db, admin)
    + get_teacher_detail_route(id, db, admin)
    + patch_teacher_route(id, data, db, admin)
  }
  class "services/teacher_service.py" as TeacherService {
    + list_teachers_overview(db, query)
    + get_teacher_detail(db, id)
    + update_teacher_profile(db, id, data)
  }
}

package "CONTRATS - Pydantic" #FFEBEE {
  class SchoolYearCreate
  class SchoolYearUpdate
  class SchoolYearDetailsUpdate
  class SchoolYearPeriodUpdate
  class SchoolYearResponse
  class SchoolYearDetailsResponse
  class ReportingPeriodCreate
  class ReportingPeriodUpdate
  class ReportingPeriodResponse
  class SchoolYearDeletionConfirmation
  class SchoolYearDeletionPreview
  class SchoolYearDeletionResponse
  class SchoolClassCreate
  class SchoolClassUpdate
  class SchoolClassResponse
  class SubjectCreate
  class SubjectUpdate
  class SubjectResponse
  class ClassSubjectCreate
  class ClassSubjectResponse
  class TeacherCreate
  class TeacherUpdate
  class TeacherResponse
  class TeacherOverview
  class TeacherDetail
}

package "MODELE - SQLAlchemy" #E3F2FD {
  class SchoolYear {
    + id: UUID
    + name: String
    + start_date: Date
    + end_date: Date
    + is_current: Boolean
    + closed_at: DateTime?
    + closed_by_account_id: UUID?
  }
  class SchoolPeriod {
    + id: UUID
    + school_year_id: UUID
    + name: String
    + start_date: Date
    + end_date: Date
  }
  class SchoolClass {
    + id: UUID
    + school_year_id: UUID
    + class_level_id: UUID
    + main_teacher_id: UUID
    + group_label: String
    + capacity: Integer?
  }
  class Subject {
    + id: UUID
    + name: String
    + is_active: Boolean
  }
  class ClassSubject {
    + id: UUID
    + class_id: UUID
    + subject_id: UUID
    + coefficient: Decimal
  }
  class Teacher {
    + id: UUID
    + account_id: UUID
    + first_name: String
    + last_name: String
    + birth_date: Date?
    + gender: String?
    + email: String?
    + phone: String?
    + address: String?
    + hire_date: Date
    + qualification: String?
    + photo_path: String?
    + archived_at: DateTime?
  }
}

SchoolYearsPage --> FrontSchoolYearService
SchoolYearDetailsPage --> FrontSchoolYearService
SchoolClassesPage --> FrontSchoolClassService
SubjectsPage --> FrontSubjectService
TeachersPage --> FrontTeacherService
TeacherDetailsPage --> FrontTeacherService

FrontSchoolYearService ..> SchoolYearRoutes : HTTP
FrontSchoolYearService ..> ReportingPeriodRoutes : HTTP
FrontSchoolClassService ..> SchoolClassRoutes : HTTP
FrontSubjectService ..> SubjectRoutes : HTTP
FrontTeacherService ..> TeacherRoutes : HTTP

SchoolYearRoutes ..> SchoolYearService
ReportingPeriodRoutes --> ReportingPeriodService
SchoolClassRoutes ..> SchoolClassService
SubjectRoutes ..> SubjectService
TeacherRoutes ..> TeacherService

SchoolYearService ..> SchoolYear
SchoolYearService ..> SchoolPeriod
ReportingPeriodService --> SchoolPeriod
ReportingPeriodService --> SchoolYearService
SchoolClassService ..> SchoolClass
SubjectService ..> Subject
SubjectService ..> ClassSubject
TeacherService ..> Teacher

SchoolYear "1" -- "0..*" SchoolPeriod
SchoolYear "1" -- "0..*" SchoolClass
SchoolClass "1" -- "0..*" ClassSubject
Subject "1" -- "0..*" ClassSubject

note bottom
État US-003 :
- routes montées dans main.py et protégées par le rôle administrateur ;
- modification globale année/périodes atomique avec verrouillage FOR UPDATE ;
- périodes progressives : fin choisie, début calculé, année active autorisée sans période (D-004/D-005) ;
- coefficients configurables validés par D-016 ;
- règles d'arrondi encore à confirmer avant US-015.
end note

@enduml
